// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiBasicTable basic - empty - custom message 1`] = `
<div
  className="euiBasicTable testClass1 testClass2"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow>
          <EuiTableRowCell
            align="center"
            colSpan={1}
            isMobileFullWidth={true}
            textOnly={true}
          >
            where my items at?
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable basic - empty - custom message as node 1`] = `
<div
  className="euiBasicTable testClass1 testClass2"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow>
          <EuiTableRowCell
            align="center"
            colSpan={1}
            isMobileFullWidth={true}
            textOnly={true}
          >
            <p>
              no items, click 
              <a
                href={true}
              >
                here
              </a>
               to make some
            </p>
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable basic - empty 1`] = `
<div
  className="euiBasicTable testClass1 testClass2"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow>
          <EuiTableRowCell
            align="center"
            colSpan={1}
            isMobileFullWidth={true}
            textOnly={true}
          >
            No items found
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable basic - with items 1`] = `
<div
  className="euiBasicTable testClass1 testClass2"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_0"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_0_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable itemIdToExpandedRowMap renders an expanded row 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_0"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_0_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
          <EuiTableRow
            isExpandedRow={true}
          >
            <EuiTableRowCell
              align="left"
              colSpan={1}
              textOnly={true}
            >
              <div>
                Expanded row
              </div>
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable with pagination - 2nd page 1`] = `
<div
  className="euiBasicTable testClass1 testClass2"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_0"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_0_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 1,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination 1`] = `
<div
  className="euiBasicTable testClass1 testClass2"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_0"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_0_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination and error 1`] = `
<div
  className="euiBasicTable testClass1 testClass2"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow>
          <EuiTableRowCell
            align="center"
            colSpan={1}
            isMobileFullWidth={true}
            textOnly={true}
          >
            <EuiIcon
              color="danger"
              size="m"
              type="minusInCircle"
            />
             
            no can do
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable with pagination and selection 1`] = `
<div
  className="euiBasicTable testClass1 testClass2"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          scope="col"
          width="24px"
        >
          <EuiCheckbox
            checked={false}
            data-test-subj="checkboxSelectAll"
            disabled={false}
            id="_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="left"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_1"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-1"
                disabled={false}
                id="_selection_column_1-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_2"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-2"
                disabled={false}
                id="_selection_column_2-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_3"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_3"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-3"
                disabled={false}
                id="_selection_column_3-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_3_0"
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination, selection and sorting 1`] = `
<div
  className="euiBasicTable testClass1 testClass2"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiTableSortMobile
        items={
          Array [
            Object {
              "isSortAscending": true,
              "isSorted": true,
              "key": "_data_s_name_0",
              "name": "Name",
              "onSort": [Function],
            },
          ]
        }
      />
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          scope="col"
          width="24px"
        >
          <EuiCheckbox
            checked={false}
            data-test-subj="checkboxSelectAll"
            disabled={false}
            id="_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="left"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_name_0"
          onSort={[Function]}
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_1"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-1"
                disabled={false}
                id="_selection_column_1-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_2"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-2"
                disabled={false}
                id="_selection_column_2-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_3"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_3"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-3"
                disabled={false}
                id="_selection_column_3-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_3_0"
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination, selection, sorting and a single record action 1`] = `
<div
  className="euiBasicTable testClass1 testClass2"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiTableSortMobile
        items={
          Array [
            Object {
              "isSortAscending": true,
              "isSorted": true,
              "key": "_data_s_name_0",
              "name": "Name",
              "onSort": [Function],
            },
          ]
        }
      />
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          scope="col"
          width="24px"
        >
          <EuiCheckbox
            checked={false}
            data-test-subj="checkboxSelectAll"
            disabled={false}
            id="_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="left"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_name_0"
          onSort={[Function]}
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
        <EuiTableHeaderCell
          align="right"
          key="_actions_h_1"
          scope="col"
        >
          Actions
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_1"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-1"
                disabled={false}
                id="_selection_column_1-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
            <EuiTableRowCell
              align="right"
              hasActions={true}
              key="record_actions_1_1"
              showOnHover={true}
              textOnly={false}
            >
              <ExpandedItemActions
                actionEnabled={[Function]}
                actions={
                  Array [
                    Object {
                      "description": "edit",
                      "name": "Edit",
                      "onClick": [Function],
                      "type": "button",
                    },
                  ]
                }
                item={
                  Object {
                    "id": "1",
                    "name": "name1",
                  }
                }
                itemId="1"
              />
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_2"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-2"
                disabled={false}
                id="_selection_column_2-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
            <EuiTableRowCell
              align="right"
              hasActions={true}
              key="record_actions_2_1"
              showOnHover={true}
              textOnly={false}
            >
              <ExpandedItemActions
                actionEnabled={[Function]}
                actions={
                  Array [
                    Object {
                      "description": "edit",
                      "name": "Edit",
                      "onClick": [Function],
                      "type": "button",
                    },
                  ]
                }
                item={
                  Object {
                    "id": "2",
                    "name": "name2",
                  }
                }
                itemId="2"
              />
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_3"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_3"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-3"
                disabled={false}
                id="_selection_column_3-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_3_0"
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
            <EuiTableRowCell
              align="right"
              hasActions={true}
              key="record_actions_3_1"
              showOnHover={true}
              textOnly={false}
            >
              <ExpandedItemActions
                actionEnabled={[Function]}
                actions={
                  Array [
                    Object {
                      "description": "edit",
                      "name": "Edit",
                      "onClick": [Function],
                      "type": "button",
                    },
                  ]
                }
                item={
                  Object {
                    "id": "3",
                    "name": "name3",
                  }
                }
                itemId="3"
              />
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination, selection, sorting and column dataType 1`] = `
<div
  className="euiBasicTable testClass1 testClass2"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiTableSortMobile
        items={
          Array [
            Object {
              "isSortAscending": true,
              "isSorted": true,
              "key": "_data_s_count_0",
              "name": "Count",
              "onSort": [Function],
            },
          ]
        }
      />
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          scope="col"
          width="24px"
        >
          <EuiCheckbox
            checked={false}
            data-test-subj="checkboxSelectAll"
            disabled={false}
            id="_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="right"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_count_0"
          onSort={[Function]}
          scope="col"
        >
          Count
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_1"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-1"
                disabled={false}
                id="_selection_column_1-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="right"
              header="Count"
              key="_data_column_count_1_0"
              textOnly={true}
            >
              1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_2"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-2"
                disabled={false}
                id="_selection_column_2-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="right"
              header="Count"
              key="_data_column_count_2_0"
              textOnly={true}
            >
              2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_3"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_3"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-3"
                disabled={false}
                id="_selection_column_3-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="right"
              header="Count"
              key="_data_column_count_3_0"
              textOnly={true}
            >
              3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination, selection, sorting and column renderer 1`] = `
<div
  className="euiBasicTable testClass1 testClass2"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiTableSortMobile
        items={
          Array [
            Object {
              "isSortAscending": true,
              "isSorted": true,
              "key": "_data_s_name_0",
              "name": "Name",
              "onSort": [Function],
            },
          ]
        }
      />
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          scope="col"
          width="24px"
        >
          <EuiCheckbox
            checked={false}
            data-test-subj="checkboxSelectAll"
            disabled={false}
            id="_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="left"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_name_0"
          onSort={[Function]}
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_1"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-1"
                disabled={false}
                id="_selection_column_1-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={false}
            >
              NAME1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_2"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-2"
                disabled={false}
                id="_selection_column_2-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={false}
            >
              NAME2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_3"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_3"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-3"
                disabled={false}
                id="_selection_column_3-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_3_0"
              textOnly={false}
            >
              NAME3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination, selection, sorting and multiple record actions 1`] = `
<div
  className="euiBasicTable testClass1 testClass2"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiTableSortMobile
        items={
          Array [
            Object {
              "isSortAscending": true,
              "isSorted": true,
              "key": "_data_s_name_0",
              "name": "Name",
              "onSort": [Function],
            },
          ]
        }
      />
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          scope="col"
          width="24px"
        >
          <EuiCheckbox
            checked={false}
            data-test-subj="checkboxSelectAll"
            disabled={false}
            id="_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="left"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_name_0"
          onSort={[Function]}
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
        <EuiTableHeaderCell
          align="right"
          key="_actions_h_1"
          scope="col"
        >
          Actions
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_1"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-1"
                disabled={false}
                id="_selection_column_1-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
            <EuiTableRowCell
              align="right"
              hasActions={true}
              key="record_actions_1_1"
              showOnHover={true}
              textOnly={false}
            >
              <ExpandedItemActions
                actionEnabled={[Function]}
                actions={
                  Array [
                    Object {
                      "name": "Actions",
                      "render": [Function],
                    },
                  ]
                }
                item={
                  Object {
                    "id": "1",
                    "name": "name1",
                  }
                }
                itemId="1"
              />
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_2"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-2"
                disabled={false}
                id="_selection_column_2-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
            <EuiTableRowCell
              align="right"
              hasActions={true}
              key="record_actions_2_1"
              showOnHover={true}
              textOnly={false}
            >
              <ExpandedItemActions
                actionEnabled={[Function]}
                actions={
                  Array [
                    Object {
                      "name": "Actions",
                      "render": [Function],
                    },
                  ]
                }
                item={
                  Object {
                    "id": "2",
                    "name": "name2",
                  }
                }
                itemId="2"
              />
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_3"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_3"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-3"
                disabled={false}
                id="_selection_column_3-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_3_0"
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
            <EuiTableRowCell
              align="right"
              hasActions={true}
              key="record_actions_3_1"
              showOnHover={true}
              textOnly={false}
            >
              <ExpandedItemActions
                actionEnabled={[Function]}
                actions={
                  Array [
                    Object {
                      "name": "Actions",
                      "render": [Function],
                    },
                  ]
                }
                item={
                  Object {
                    "id": "3",
                    "name": "name3",
                  }
                }
                itemId="3"
              />
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination, selection, sorting, column renderer and column dataType 1`] = `
<div
  className="euiBasicTable testClass1 testClass2"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiTableSortMobile
        items={
          Array [
            Object {
              "isSortAscending": true,
              "isSorted": true,
              "key": "_data_s_count_0",
              "name": "Count",
              "onSort": [Function],
            },
          ]
        }
      />
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          scope="col"
          width="24px"
        >
          <EuiCheckbox
            checked={false}
            data-test-subj="checkboxSelectAll"
            disabled={false}
            id="_selection_column-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="right"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_count_0"
          onSort={[Function]}
          scope="col"
        >
          Count
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_1"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-1"
                disabled={false}
                id="_selection_column_1-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="right"
              header="Count"
              key="_data_column_count_1_0"
              textOnly={false}
            >
              x
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_2"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-2"
                disabled={false}
                id="_selection_column_2-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="right"
              header="Count"
              key="_data_column_count_2_0"
              textOnly={false}
            >
              xx
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_3"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCellCheckbox
              key="_selection_column_3"
            >
              <EuiCheckbox
                checked={false}
                data-test-subj="checkboxSelectRow-3"
                disabled={false}
                id="_selection_column_3-checkbox"
                onChange={[Function]}
                type="inList"
              />
            </EuiTableRowCellCheckbox>
            <EuiTableRowCell
              align="right"
              header="Count"
              key="_data_column_count_3_0"
              textOnly={false}
            >
              xxx
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with sortable columns and sorting disabled 1`] = `
<div
  className="euiBasicTable testClass1 testClass2"
>
  <div>
    <EuiTableHeaderMobile />
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          key="_data_h_name_0"
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_0"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_0_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable with sorting 1`] = `
<div
  className="euiBasicTable testClass1 testClass2"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiTableSortMobile
        items={
          Array [
            Object {
              "isSortAscending": true,
              "isSorted": true,
              "key": "_data_s_name_0",
              "name": "Name",
              "onSort": [Function],
            },
          ]
        }
      />
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_name_0"
          onSort={[Function]}
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <React.Fragment
          key="row_0"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_0_0"
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_1"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_1_0"
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
        <React.Fragment
          key="row_2"
        >
          <EuiTableRow
            isSelected={false}
          >
            <EuiTableRowCell
              align="left"
              header="Name"
              key="_data_column_name_2_0"
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
          </EuiTableRow>
        </React.Fragment>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;
